--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    background-color: #f8f8f8;
+    background-color:#45172d;
     gap: 8px; 
     flex-wrap: nowrap;
 }
