Criando as funcionalidades: aumentar e diminuir texto, dislexia e reset

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
+@font-face {
+  font-family: 'OpenDyslexic';
+  /* O caminho agora é relativo: ./ */
+  src: url('./fonts/OpenDyslexic-Regular.woff2') format('woff2'),
+       url('./fonts/OpenDyslexic-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'OpenDyslexic';
+  /* O caminho agora é relativo: ./ */
+  src: url('./fonts/OpenDyslexic-Italic.woff2') format('woff2'),
+       url('./fonts/OpenDyslexic-Italic.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+}
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
@@ -12,16 +28,21 @@ body {
 code {
   font-family: "Poppins", sans-serif;
 }
-/* -- Fontes -- */
-body.font-large {
-  font-size: 115%; /* Aumenta todo o texto do site */
+
+/* -- Tamanhos de Fonte -- */
+html.font-large {
+  font-size: 115%; /* Isso agora mudará o valor de 1rem */
 }
-body.font-small {
+html.font-small {
   font-size: 90%; /* Diminui todo o texto do site */
 }
-body.readable-font {
-  /* Você precisará importar esta fonte no seu projeto, se quiser usá-la */
-  font-family: 'OpenDyslexic', Arial, sans-serif !important; 
+
+/* * AQUI ESTÁ A OUTRA CORREÇÃO:
+ * Mudei de 'body.readable-font' para 'html.readable-font'
+ * para bater com o seu arquivo AccessibilityMenu.tsx
+*/
+html.readable-font * {
+  font-family: 'OpenDyslexic', Arial, sans-serif !important;
 }
 
 /* -- Cores e Contraste -- */
